src/test/deca/context/invalid/if_read_float.deca
/*
    Description : Utilisation d'un readfloat au sein d'un if

    Résultat: Erreur contextuelle (deca:8:8)
*/
{
    int x;
    if (readInt()){
        x = 2;
    }
}
